--- a/WEB AUTOMOTORES VYV/public/index.html
+++ b/WEB AUTOMOTORES VYV/public/index.html
@@ -18,36 +18,36 @@
 <body>
   <!-- HEADER -->
   <!-- MAIN-HEADER -->
-  <header class="main-header">
+  <header class="main-header" role="banner">
     <!-- HEADER-1 -->
     <div class="header-1">
-      <div class="h-1-list-ini-container">
+      <div class="h-1-list-ini-container" role="navigation" aria-label="Menú de usuario">
         <ul class="ini">
           <li>
-            <a href=""><i class="fas fa-envelope"></i></a>
+            <a href="" aria-label="Enviar correo"><i class="fas fa-envelope"></i></a>
           </li>
           <li>
-            <a href=""><i class="fas fa-user"></i></a>
+            <a href="" aria-label="Iniciar sesión"><i class="fas fa-user"></i></a>
           </li>
           <li>
-            <a href=""><i class="fab fa-shopify"></i></a>
+            <a href="" aria-label="Carrito de compras"><i class="fab fa-shopify"></i></a>
           </li>
         </ul>
       </div>
       <div class="h-1-text-container">
         <h1>Todo lo que te mueve en un solo lugar</h1>
       </div>
-      <div class="h-1-list-container">
+      <div class="h-1-list-container" aria-label="Redes sociales" role="navigation">
         <ul class="redes">
           <li>
             <!-- <a href=""><i class="fab fa-facebook-square"></i></a> -->
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="" aria-label="Síguenos en X"><i class="fa-brands fa-x-twitter"></i></a>
           </li>
           <li>
-            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href="" aria-label="Síguenos en Instagram"><i class="fab fa-instagram"></i></a>
           </li>
           <li>
-            <a href=""><i class="fab fa-whatsapp"></i></a>
+            <a href="" aria-label="Contáctanos por WhatsApp"><i class="fab fa-whatsapp"></i></a>
           </li>
         </ul>
       </div>
@@ -56,18 +56,18 @@
     <!-- HEADER-2 -->
     <div class="header-2">
       <div class="h-2-logo-container">
-        <i class="fas fa-car-side"></i>
+        <i class="fas fa-car-side" aria-hidden="true"></i>
         <div class="h-2-text-logo-container">
           <h1>VIRGEN DEL VALLE</h1>
           <h2>AUTOMOTORES</h2>
         </div>
       </div>
-      <input type="checkbox" name="" id="toggle-menu" class="mobile-toggle" />
+      <input type="checkbox" name="" id="toggle-menu" class="mobile-toggle" aria-label="Abrir menú de navegación" />
 
       <div class="h-2-hamb-container">
         <label for="toggle-menu"><i class="fas fa-bars"></i></label>
       </div>
-      <nav class="h-2-nav-container">
+      <nav class="h-2-nav-container" aria-label="Menú principal" role="navigation">
         <ul class="nav-list">
           <li><a href="#galeria">Galería</a></li>
           <li><a href="#nosotros">Nosotros</a></li>
@@ -78,27 +78,28 @@
   </header>
 
   <!-- MAIN -->
-  <main class="main">
+  <main class="main" role="main">
     <!-- HERO -->
-    <section class="hero">
-      <div id="miCarrusel" class="carrusel">
+    <section class="hero" aria-label="Destacados">
+      <div id="miCarrusel" class="carrusel" role="region" aria-roledescription="carousel"
+        aria-label="Vehículos destacados">
         <div class="carrusel-interno">
-          <div class="carrusel-item activo">
+          <div class="carrusel-item activo" role="group" aria-roledescription="slide" aria-label="1 de 3">
             <img
               src="https://resizer.iproimg.com/unsafe/1280x/filters:format(webp)/https://assets.iprofesional.com/assets/jpg/2018/07/461321.jpg"
               alt="Primer auto en venta" class="imagen-carrusel" />
           </div>
-          <div class="carrusel-item">
+          <div class="carrusel-item" role="group" aria-roledescription="slide" aria-label="2 de 3">
             <img
               src="https://resizer.iproimg.com/unsafe/1280x/filters:format(webp)/https://assets.iprofesional.com/assets/jpg/2021/07/519548.jpg"
               alt="Segundo auto en venta" class="imagen-carrusel" />
           </div>
-          <div class="carrusel-item">
+          <div class="carrusel-item" role="group" aria-roledescription="slide" aria-label="3 de 3">
             <img src="https://arc-anglerfish-arc2-prod-infobae.s3.amazonaws.com/public/4ZIVFSJV4JAULCJA4PAVV23PLM.jpg"
               alt="Tercer auto en venta" class="imagen-carrusel" />
           </div>
         </div>
-        <div class="carrusel-overlay">
+        <div class="carrusel-overlay" role="complementary" aria-label="Información destacada">
           <div class="overlay-content">
             <h2>Encuentra el Vehículo Perfecto para Ti</h2>
             <p>
@@ -111,11 +112,12 @@
             </div>
           </div>
         </div>
-        <button class="carrusel-control carrusel-prev" type="button" data-direccion="prev">
+        <button class="carrusel-control carrusel-prev" type="button" data-direccion="prev" aria-label="Imagen anterior">
           <span aria-hidden="true">❮</span>
           <span class="oculto-visual">Anterior</span>
         </button>
-        <button class="carrusel-control carrusel-next" type="button" data-direccion="next">
+        <button class="carrusel-control carrusel-next" type="button" data-direccion="next"
+          aria-label="Siguiente imagen">
           <span aria-hidden="true">❯</span>
           <span class="oculto-visual">Siguiente</span>
         </button>
@@ -123,12 +125,12 @@
     </section>
 
     <!-- TIENDA -->
-    <section class="tienda" id="galeria">
+    <section class="tienda" id="galeria" aria-labelledby="titulo-galeria">
       <div class="tienda-container">
         <h1>Modelos Destacados del Mes</h1>
       </div>
-      <div class="auto-grid">
-        <div class="auto-card">
+      <div class="auto-grid" role="list">
+        <article class="auto-card" role="listitem">
           <div class="auto-tumb">
             <img
               src="https://acroadtrip.blob.core.windows.net/catalogo-imagenes/s/RT_V_0db8955ac91b489a817b0cd1754b978e.webp"
@@ -142,15 +144,15 @@
               alto entre sus competidores.
             </p>
             <div class="auto-bottom-details">
-              <div class="auto-price">$28.250.000</div>
+              <div class="auto-price" aria-label="Precio: 28 millones 250 mil pesos">$28.250.000</div>
               <div class="auto-links">
-                <a href=""><i class="fa fa-heart"></i></a>
-                <a href=""><i class="fa fa-shopping-cart"></i></a>
+                <a href="" aria-label="Agregar a favoritos"><i class="fa fa-heart"></i></a>
+                <a href="" aria-label="Agregar al carrito"><i class="fa fa-shopping-cart"></i></a>
               </div>
             </div>
           </div>
-        </div>
-        <div class="auto-card">
+        </article>
+        <article class="auto-card" role="listitem">
           <div class="auto-tumb">
             <img
               src="https://acroadtrip.blob.core.windows.net/catalogo-imagenes/s/RT_V_01bd8671c7164440833188cef3feb27c.webp"
@@ -164,15 +166,15 @@
               control aerodinámico.
             </p>
             <div class="auto-bottom-details">
-              <div class="auto-price">$33.525.000</div>
+              <div class="auto-price" aria-label="Precio: 33 millones 525 mil pesos">$33.525.000</div>
               <div class="auto-links">
-                <a href=""><i class="fa fa-heart"></i></a>
-                <a href=""><i class="fa fa-shopping-cart"></i></a>
+                <a href="" aria-label="Agregar a favoritos"><i class="fa fa-heart"></i></a>
+                <a href="" aria-label="Agregar al carrito"><i class="fa fa-shopping-cart"></i></a>
               </div>
             </div>
           </div>
-        </div>
-        <div class="auto-card">
+        </article>
+        <article class="auto-card" role="listitem">
           <div class="auto-tumb">
             <img
               src="https://acroadtrip.blob.core.windows.net/catalogo-imagenes/s/RT_V_8a6721feb2124b2e8ce38ee407cb8403.webp"
@@ -186,22 +188,22 @@
               torque
             </p>
             <div class="auto-bottom-details">
-              <div class="auto-price">$34.000.000</div>
+              <div class="auto-price" aria-label="Precio: 34 millones de pesos">$34.000.000</div>
               <div class="auto-links">
-                <a href=""><i class="fa fa-heart"></i></a>
-                <a href=""><i class="fa fa-shopping-cart"></i></a>
+                <a href="" aria-label="Agregar a favoritos"><i class="fa fa-heart"></i></a>
+                <a href="" aria-label="Agregar al carrito"><i class="fa fa-shopping-cart"></i></a>
               </div>
             </div>
           </div>
-        </div>
+        </article>
       </div>
     </section>
 
     <!-- ABOUT-FORM -->
     <div class="about-form">
-      <div class="form-content">
+      <section class="form-content" aria-labelledby="titulo-contacto">
         <h3>Contáctanos</h3>
-        <form id="formulario">
+        <form id="formulario" aria-label="Formulario de contacto">
           <div class="form-group">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" placeholder="Tu nombre completo" required>
@@ -219,8 +221,8 @@
 
           <button type="submit" class="btn-submit">Enviar Mensaje</button>
         </form>
-      </div>
-      <div class="about-content" id="nosotros">
+      </section>
+      <section class="about-content" id="nosotros" aria-labelledby="titulo-empresa">
         <h3>Nuestra empresa</h3>
         <p>Una empresa Familiar en constante evolución y siempre pensando en el cliente.</p>
         <p>Hace 40 años, nos encontramos al servicio del usuario automotor brindándole una amplia gama de servicios
@@ -228,12 +230,12 @@
           que el producto que más hacemos valer es la tranquilidad que vendemos al cliente. Todo este crecimiento fue
           gracias a nuestro personal capacitado encargado de diferentes áreas sin descuidar nuestra atención
           personalizada.</p>
-      </div>
+      </section>
     </div>
 
 
     <!-- FOOTER -->
-    <footer id="contacto">
+    <footer id="contacto" role="contentinfo">
       <div class="footer-lists-container">
         <div class="footer-content">
           <div class="footer-column">
@@ -248,35 +250,44 @@
 
           </div>
           <div class="footer-column">
-            <ul>
-              <h3>Marcas</h3>
-              <li><a href="">Volkswagen</a></li>
-              <li><a href="">Renault</a></li>
-              <li><a href="">Chevrolet</a></li>
-              <li><a href="">Citroen</a></li>
-            </ul>
+            <nav aria-label="Marcas de vehículos">
+              <ul>
+                <h3>Marcas</h3>
+                <li><a href="">Volkswagen</a></li>
+                <li><a href="">Renault</a></li>
+                <li><a href="">Chevrolet</a></li>
+                <li><a href="">Citroen</a></li>
+              </ul>
+            </nav>
+
           </div>
           <div class="footer-column">
-            <ul>
-              <h3>Empresa</h3>
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#">Servicios</a></li>
-              <li><a href="#galeria">Tienda</a></li>
-              <li><a href="#formulario">Contacto</a></li>
-            </ul>
+            <nav aria-label="Navegación de empresa">
+              <ul>
+                <h3>Empresa</h3>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#galeria">Tienda</a></li>
+                <li><a href="#formulario">Contacto</a></li>
+              </ul>
+            </nav>
           </div>
           <div class="footer-column">
             <ul>
               <h3>Contacto</h3>
-              <li><i class="fas fa-location-dot icon-foot"></i><a href="">Miguel de Azcuenaga 781</a></li>
-              <li><i class="fas fas fa-envelope-open icon-foot"></i><a href="">V_delvalle@automail.com</a></li>
-              <li><i class="fas fas fa-phone icon-foot"></i><a href="">+54 9875 56-9856</a></li>
-              <li><i class="fas fas fa-clock icon-foot"></i><a href="">Lun-Vie 09-16:30 / Sab 09-13</a></li>
-              <ul class="ul-footer-icons">
-                <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+              <li><i class="fas fa-location-dot icon-foot" aria-hidden="true"></i><a href="">Miguel de Azcuenaga 781</a>
+              </li>
+              <li><i class="fas fas fa-envelope-open icon-foot" aria-hidden="true"></i><a
+                  href="">V_delvalle@automail.com</a></li>
+              <li><i class="fas fas fa-phone icon-foot" aria-hidden="true"></i><a href="">+54 9875 56-9856</a></li>
+              <li><i class="fas fas fa-clock icon-foot" aria-hidden="true"></i><a href="">Lun-Vie 09-16:30 / Sab
+                  09-13</a></li>
+              <nav></nav>
+              <ul class="ul-footer-icons" aria-label="Redes sociales en el pie de página">
+                <li><a href="" aria-label="X-Twitter"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
               </ul>
             </ul>
           </div>
